add_executable(thread_test thread_test.cpp)
target_link_libraries(thread_test libserver_base)

add_executable(threadpool_test threadpool_test.cpp)
target_link_libraries(threadpool_test libserver_base)

add_executable(logging_test Logging_test.cpp)
target_link_libraries(logging_test libserver_base)

add_executable(timestamp_test TimeStamp_test.cpp)
target_link_libraries(timestamp_test libserver_base)

